# -arrington-annotation-tool

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  build.bat  build.ps1  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build-exe.yml  ci.yml  publish-testpypi.yml  publish.yml  release.yml
RELEASES/: v0.2.0.md
docs/: gui.md  publishing.md
engine-src/: README.md  build.ps1
engine-src/detector/: postProcess.cpp  postProcess.h
src/aat/: __init__.py  annotation.py  cli.py  config.py  dataset.py  generate.py  viewer.py
src/aat/gui/: __init__.py  app.py
src/aat/inference/: __init__.py  protocol.py  ultralytics_engine.py  worker_engine.py
src/aat/io/: __init__.py  labels.py  shapes.py
src/arrington_annotation_tool_gui.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/yolo_annotator/: __init__.py  classes.py  dataset.py  worker_protocol.py  yolo.py
tests/: test_aat_config.py  test_aat_generate.py  test_aat_io.py
tools/: aat_viewer_app.py
