[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arrington-annotation-tool-gui"
version = "0.2.0"
description = "Arrington Annotation Tool (AAT) GUI - detect annotation with C++ inference backend"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "Pillow>=10.3",
  "customtkinter>=5.2",
]

[project.optional-dependencies]
dev = ["pyinstaller"]

[project.scripts]
aat-gui = "aat_viewer_app:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["aat*", "yolo_annotator*"]

[tool.setuptools.package-data]
"*" = ["*"]